home-cluster/synapse/bridge-signal.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bridge-signal
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-signal
  serviceName: bridge-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-signal
    spec:
      containers:
        - image: dock.mau.dev/mautrix/signal:v0.4.2
          name: mautrix-signal
          ports:
            - containerPort: 29328
            - name: mau-sig-metrics
              containerPort: 8001
          volumeMounts:
            - name: data
              mountPath: /data
            - name: signald
              mountPath: /signald
            - name: data
              mountPath: /signald_data
              subPath: signald
        - image: signald/signald:stable
          name: signald
          args:
            - -d
            - /data/signald
            - --metrics
            - -s
            - /signald/signald.sock
          ports:
            - name: signald-metrics
              containerPort: 9595
          volumeMounts:
            - name: data
              mountPath: /data
            - name: signald
              mountPath: /signald
        - name: litestream
          image: litestream/litestream:0.3.9
          args: ['replicate']
          volumeMounts: &litestreamvols
            - name: data
              mountPath: /data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream-signal.yml
          envFrom: &litestreamenv
            - secretRef:
                name: backup-bucket
          ports:
            - name: ls-metrics
              containerPort: 9090
      volumes:
        - name: config-templates
          configMap:
            name: config-signal
        - name: litestream-config
          configMap:
            name: litestream-config-signal
        - name: signald
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-signal
  namespace: synapse
spec:
  ports:
  - port: 29328
    protocol: TCP
    targetPort: 29328
  selector:
    app.kubernetes.io/name: bridge-signal
