home-cluster/synapse/bridge-telegram.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bridge-telegram
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-telegram
  serviceName: bridge-telegram
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-telegram
    spec:
      containers:
        - image: dock.mau.dev/mautrix/telegram:v0.12.1
          name: mautrix-telegram
          ports:
            - containerPort: 29317
            - name: metrics
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
        - name: litestream
          image: litestream/litestream:0.3.9
          args: ['replicate']
          volumeMounts: &litestreamvols
            - name: data
              mountPath: /data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream-telegram.yml
          envFrom: &litestreamenv
            - secretRef:
                name: backup-bucket
          ports:
            - name: ls-metrics
              containerPort: 9090
      volumes:
        - name: config-templates
          configMap:
            name: config-telegram
        - name: data
          emptyDir: {}
        - name: litestream-config
          configMap:
            name: litestream-config-telegram
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-telegram
  namespace: synapse
spec:
  ports:
  - port: 29317
    protocol: TCP
    targetPort: 29317
  selector:
    app.kubernetes.io/name: bridge-telegram
