home-cluster/synapse/bridge-whatsapp.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bridge-whatsapp
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-whatsapp
  serviceName: bridge-whatsapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-whatsapp
    spec:
      containers:
        - image: dock.mau.dev/mautrix/whatsapp:v0.8.3
          name: mautrix-whatsapp
          command:
            - /usr/bin/mautrix-whatsapp
            - -c
            - /config/mautrix-whatsapp.yaml
          ports:
            - containerPort: 29318
            - name: metrics
              containerPort: 8002
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: litestream
          image: litestream/litestream:0.3.9
          args: ['replicate']
          volumeMounts: &litestreamvols
            - name: data
              mountPath: /data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream-whatsapp.yml
          envFrom: &litestreamenv
            - secretRef:
                name: backup-bucket
          ports:
            - name: ls-metrics
              containerPort: 9090
      volumes:
        - name: config-template
          configMap:
            name: config-whatsapp
        - name: litestream-config
          configMap:
            name: litestream-config-whatsapp
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-whatsapp
  namespace: synapse
spec:
  ports:
  - port: 29318
    protocol: TCP
    targetPort: 29318
  selector:
    app.kubernetes.io/name: bridge-whatsapp
