home-cluster/synapse/synapse.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  serviceName: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
    spec:
      containers:
        - name: litestream
          image: litestream/litestream:0.3.9
          args: ['replicate']
          volumeMounts: &litestreamvols
            - name: data
              mountPath: /data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
          envFrom: &litestreamenv
            - secretRef:
                name: backup-bucket
          ports:
            - name: ls-metrics
              containerPort: 9090
        - image: matrixdotorg/synapse:v1.80.0
          name: synapse
          ports:
            - name: synapse
              containerPort: 8008
            - name: metrics
              containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: media
              mountPath: /data/media
            - name: signing-key
              mountPath: /signing-key
      tolerations:
        - key: samcday.com/cloud
          operator: Exists
          effect: NoExecute
      volumes:
        - name: config-templates
          configMap:
            name: config
        - name: config
          emptyDir: {}
        - name: data
          emptyDir: {}
        - name: litestream-config
          configMap:
            name: litestream-config
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: signing-key
          secret:
            secretName: signing-key
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
spec:
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app.kubernetes.io/name: synapse
