home-cluster/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: synapse
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: homeserver.samcday.com
spec:
  ingressClassName: nginx
  rules:
  - host: homeserver.samcday.com
    http:
      paths:
      - backend:
          service:
            name: synapse
            port:
              number: 8008
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - homeserver.samcday.com
    secretName: certificate
